Fixed small layout bug with bottom bar

--- a/www/style-less.mac.css
+++ b/www/style-less.mac.css
@@ -99,7 +99,7 @@ input {
 #secondary-bar .nav-inner {
 	padding: 4px 0;
 }
-#bottom-bar {
+h1.listing ~ #bottom-bar {
 	margin-top: 1.25em;
 }
 #bottom-bar .nav-item {
@@ -5622,19 +5622,7 @@ div > .MJXc-display {
 /* FOR NARROW SCREENS */
 /*====================*/
 
-@media only screen and (max-width: 1440px) {
-	#hns-date-picker {
-		opacity: 1.0;
-	}
-	#hns-date-picker::before {
-		border: 1px solid #999;
-		border-width: 1px 0 1px 1px;
-	}
-}
 @media only screen and (max-width: 1200px) {
-	#hns-date-picker::before {
-		display: none;
-	}
 }
 @media only screen and (max-width: 1080px) {
 	#text-size-adjustment-ui button {
